--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "@types/react-router-dom": "^5.1.4",
+    "axios": "^0.21.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "react-hook-form": "^7.15.3",
+    "react-redux": "^7.2.4",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.0"
+    "react-scripts": "3.4.0",
+    "redux": "^4.1.1",
+    "redux-saga": "^1.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
